ecmascript/parser/tests/test262-error-references/fail/c06e4b51c181990e.js.stderr
error: Expression expected
 --> $DIR/tests/test262-parser/fail/c06e4b51c181990e.js:2:23
  |
2 |     foo() { new super + 3 }
  |                       ^

